syntax = "proto3";
import "parking_slot.proto";
import "common.proto";
package autodrive.workflow.proto;


message ParkingSlotsMsg {
  // Header
  MsgHeader header = 1;
  // Error
  Error error = 2;
  repeated parking_slot.ParkingSlotInfo parking_slots = 3;
}